log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 03:23:42 PM UTC: 
 tests:  0|6
total_score: 0/70
d3f4022
Thu 30 Mar 2023 03:31:16 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:1: error: control reaches end of non-void function [-Werror=return-type]
   17 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1d1c630
Thu 30 Mar 2023 03:31:28 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
f55d422
Thu 30 Mar 2023 03:34:34 PM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:9: error: ‘*List.data’ is used uninitialized [-Werror=uninitialized]
   16 |     List->data[i] = NULL;
      |     ~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
cd92318
Thu 30 Mar 2023 03:35:55 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:16: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   16 |     void * List->data = (void *) malloc(sizeof(void));
      |                ^~
arraylist.c:16:16: error: expected expression before ‘->’ token
Compilation failed
8659f7b
Thu 30 Mar 2023 03:36:13 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:17: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   16 |     void ** List->data = (void **) malloc(sizeof(void));
      |                 ^~
arraylist.c:16:17: error: expected expression before ‘->’ token
Compilation failed
9a38a14
Thu 30 Mar 2023 03:36:40 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   16 |     void List->data = (void) malloc(sizeof(void));
      |              ^~
arraylist.c:16:14: error: expected expression before ‘->’ token
Compilation failed
7042dd2
Thu 30 Mar 2023 03:37:04 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:10: error: variable or field ‘data’ declared void
   16 |     void data = (void) malloc(sizeof(void));
      |          ^~~~
arraylist.c:16:17: error: void value not ignored as it ought to be
   16 |     void data = (void) malloc(sizeof(void));
      |                 ^
arraylist.c:16:10: error: unused variable ‘data’ [-Werror=unused-variable]
   16 |     void data = (void) malloc(sizeof(void));
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
0e891a4
Thu 30 Mar 2023 03:37:14 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘.’ token
   16 |     void List.data = (void) malloc(sizeof(void));
      |              ^
arraylist.c:16:14: error: expected expression before ‘.’ token
Compilation failed
8b0c769
